fix: resolve keyboard issue on small screens and update PWA icon

--- a/connect-ui/src/styles/index.css
+++ b/connect-ui/src/styles/index.css
@@ -22,7 +22,7 @@ a {
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-  width: 0.4rem;
+  width: 0.1rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -31,13 +31,13 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 0.375rem rgba(238, 238, 238, 0.9);
+  box-shadow: inset 0 0 0.375rem rgba(112, 106, 106, 1);
   outline: none;
   border-radius: 0.8rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  box-shadow: inset 0 0 0.375rem rgba(112, 106, 106, 1);
+  box-shadow: inset 0 0 0.375rem rgba(238, 238, 238, 0.9);
 }
 
 /* calling */
